2004-07-19  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b40

	* Change: Since we no longer do shutterfly donations, 
	  $gallery->app->default["print_photos"] can end up being ""
	  which causes the key() in view_photo to fail.  This prevents
	  the error message from key() and prevents printing of a blank
	  print href.

2004-07-19 JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b39

	* Change: New variable to pull the thumsize to create a 
		  defaultwidth and height for the divCell to align everything up.

2004-07-19 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b38

	* Change: Added link to JoEllen Drazans Skin Page in ConfigWizard.

2004-07-18 Jens A. Tkotz <jens@peino.de> 1.4.5-cvs-b37

	* Change: Accidently reverted 1.4.5-cvs-b12 rereverted ;)

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b36
	
	* Fix: Added css classes to have "old" layout.

	* New: Added version number and Last Update to Skins.

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b35

	* Change: Continue Skin Changes.

	* New: added "bars002" as reference skin.

2004-07-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b34

	* Change: Minor fix for the view_album optimizations

2004-07-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b33

	* Change: Fix pseudo-register_globals to allow login/etc on PHP5
	  until it goes away.

2004-07-18 Jens A. Tkotz <jens@peino.de> ; JoEllen Drazan <skins@pownuke.com> 1.4.5-cvs-b32

	* New: Added possibility to use your own header footer via a template file.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b31

	* Fix: bad quoting in util.php.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b30 

	Change: No more $HTTP*.

2004-07-17 Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b29

	* Change: Switched more $HTTP Vars to superglobals. (not all)

2004-07-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b28
